Wk4 toString() Administratie LinkedList Random.nextInt(100)